@@ -14,7 +14,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: heur_fixandinfer.c,v 1.19 2006/06/20 20:24:00 bzfpfend Exp $"
+#pragma ident "@(#) $Id: heur_fixandinfer.c,v 1.20 2006/06/29 20:59:04 bzfpfend Exp $"
 
 /**@file   heur_fixandinfer.c
  * @brief  fix-and-infer primal heuristic
@@ -211,7 +211,7 @@ SCIP_DECL_HEUREXEC(heurExecFixandinfer)
       SCIP_CALL( fixVariable(scip, cands, ncands) );
 
       /* propagate the fixing */
-      SCIP_CALL( SCIPpropagateProbing(scip, heurdata->proprounds, &cutoff) );
+      SCIP_CALL( SCIPpropagateProbing(scip, heurdata->proprounds, &cutoff, NULL) );
 
       /* get remaining unfixed variables */
       if( !cutoff )
