@@ -14,7 +14,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: scip.c,v 1.378 2006/06/21 11:53:17 bzfpfend Exp $"
+#pragma ident "@(#) $Id: scip.c,v 1.379 2006/06/29 20:59:04 bzfpfend Exp $"
 
 /**@file   scip.c
  * @brief  SCIP callable library
@@ -10211,7 +10211,8 @@ SCIP_RETCODE SCIPfixVarProbing(
 SCIP_RETCODE SCIPpropagateProbing(
    SCIP*                 scip,               /**< SCIP data structure */
    int                   maxproprounds,      /**< maximal number of propagation rounds (-1: no limit, 0: parameter settings) */
-   SCIP_Bool*            cutoff              /**< pointer to store whether the probing node can be cut off */
+   SCIP_Bool*            cutoff,             /**< pointer to store whether the probing node can be cut off */
+   SCIP_Longint*         ndomredsfound       /**< pointer to store the number of domain reductions found, or NULL */
    )
 {
    SCIP_CALL( checkStage(scip, "SCIPpropagateProbing", FALSE, FALSE, FALSE, FALSE, TRUE, FALSE, FALSE, TRUE, FALSE, FALSE, FALSE) );
@@ -10222,8 +10223,14 @@ SCIP_RETCODE SCIPpropagateProbing(
       return SCIP_INVALIDCALL;
    }
 
+   if( ndomredsfound != NULL )
+      *ndomredsfound = -(scip->stat->nboundchgs + scip->stat->nholechgs);
+
    SCIP_CALL( SCIPpropagateDomains(scip->mem->solvemem, scip->set, scip->stat, scip->transprob, scip->tree,
          scip->conflict, 0, maxproprounds, cutoff) );
+
+   if( ndomredsfound != NULL )
+      *ndomredsfound += scip->stat->nboundchgs + scip->stat->nholechgs;
 
    return SCIP_OKAY;
 }
